; ModuleID = '/home/carl/AnghaBench/esp-idf/components/console/argtable3/extr_argtable3.c_arg_int_checkfn.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/console/argtable3/extr_argtable3.c_arg_int_checkfn.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.arg_int = type { i64, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i64 }

@EMINCOUNT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.arg_int*)* @arg_int_checkfn to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @arg_int_checkfn(%struct.arg_int* %0) #0 {
  %2 = alloca %struct.arg_int*, align 8
  %3 = alloca i32, align 4
  store %struct.arg_int* %0, %struct.arg_int** %2, align 8
  %4 = load %struct.arg_int*, %struct.arg_int** %2, align 8
  %5 = getelementptr inbounds %struct.arg_int, %struct.arg_int* %4, i32 0, i32 0
  %6 = load i64, i64* %5, align 8
  %7 = load %struct.arg_int*, %struct.arg_int** %2, align 8
  %8 = getelementptr inbounds %struct.arg_int, %struct.arg_int* %7, i32 0, i32 1
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = icmp slt i64 %6, %10
  br i1 %11, label %12, label %14

12:                                               ; preds = %1
  %13 = load i32, i32* @EMINCOUNT, align 4
  br label %15

14:                                               ; preds = %1
  br label %15

15:                                               ; preds = %14, %12
  %16 = phi i32 [ %13, %12 ], [ 0, %14 ]
  store i32 %16, i32* %3, align 4
  %17 = load i32, i32* %3, align 4
  ret i32 %17
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
